feat: add mobile-first responsive design with enhanced accessibility and testing infrastructure
- Implement comprehensive mobile layouts with slide panels and touch gestures
- Add extensive accessibility features (ARIA, keyboard navigation, screen reader support)
- Integrate complete testing suite with Jest and Playwright
- Enhance performance with GPU acceleration and optimized animations
- Add error boundaries, toast notifications, and form validation
- Implement drag-and-drop, pull-to-refresh, and swipe gestures
- Create responsive typography and spacing systems
- Add high contrast mode and reduced motion support
- Include comprehensive keyboard shortcuts and focus management
- Set up performance monitoring and bundle analysis tools

BREAKING CHANGE: Major restructuring of components to support mobile-first design with new props and context providers

--- a/package.json
+++ b/package.json
@@ -6,7 +6,18 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:visual": "playwright test --project=chromium",
+    "test:performance": "node scripts/performance-tests.js",
+    "test:accessibility": "node scripts/accessibility-tests.js",
+    "test:all": "npm run test && npm run test:e2e && npm run test:performance && npm run test:accessibility"
   },
   "dependencies": {
     "react": "19.1.0",
@@ -22,6 +33,48 @@
     "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
-    "@eslint/eslintrc": "^3"
+    "@eslint/eslintrc": "^3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/user-event": "^14.5.1",
+    "@testing-library/dom": "^9.3.3",
+    "@testing-library/accessibility": "^0.6.0",
+    "jest-axe": "^8.0.0",
+    "@playwright/test": "^1.40.1",
+    "playwright": "^1.40.1",
+    "@storybook/test-runner": "^0.16.0",
+    "@storybook/addon-viewport": "^7.6.5",
+    "msw": "^2.0.11",
+    "nock": "^13.4.0",
+    "sinon": "^17.0.1",
+    "lolex": "^6.0.0",
+    "@sinonjs/fake-timers": "^11.2.2",
+    "canvas": "^2.11.2",
+    "pixelmatch": "^5.3.0",
+    "lighthouse": "^11.4.0",
+    "chrome-launcher": "^1.1.0",
+    "web-vitals": "^3.5.0",
+    "bundle-analyzer": "^0.1.0",
+    "webpack-bundle-analyzer": "^4.10.1",
+    "clinic": "^12.1.0",
+    "why-is-node-running": "^2.2.2",
+    "heapdump": "^0.3.15",
+    "jest-performance": "^0.1.0",
+    "perfy": "^1.4.1",
+    "benchmark": "^2.1.4",
+    "axe-core": "^4.8.2",
+    "pa11y": "^7.0.0",
+    "html-validate": "^8.9.0",
+    "css-validator": "^0.11.0",
+    "eslint-plugin-jest": "^27.6.0",
+    "eslint-plugin-testing-library": "^6.2.0",
+    "eslint-plugin-playwright": "^0.21.0",
+    "@types/jest": "^29.5.8",
+    "@types/sinon": "^17.0.2",
+    "@types/benchmark": "^2.1.5",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1"
   }
 }
